<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dialog_demo.MainActivity" >

    <Button
        android:id="@+id/exitbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/exitbutt"
        android:textSize="8pt" />

    <Button
        android:id="@+id/listbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/exitbutt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:text="@string/listbutt"
        android:textSize="8pt" />

    <Button
        android:id="@+id/selebutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listbutt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:text="@string/selebutt"
        android:textSize="8pt" />

    <Button
        android:id="@+id/morebutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/selebutt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:text="@string/morebutt"
        android:textSize="8pt" />

    <Button
        android:id="@+id/editbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/morebutt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:text="@string/editbutt"
        android:textSize="8pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editbutt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dip"
        android:text="点击返回键，显示退出对话框"
        android:textSize="8pt" />

</RelativeLayout>